Set base styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
@@ -26,7 +29,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="">Bethany</a>.
+      Coded by <a href="https://github.com/whimsicurl-creations/fm-base-apparel">Bethany</a>.
     </p>
   </footer>
 </body>
