--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
   </style>
 </head>
 <body>
+  
+  <div>
+    <img src="images/logo.svg" alt="Base Apparel Logo">
+  </div>
 
-  We're coming soon
+  <h1><span>We're</span> coming soon</h1>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+  <p>Hello fellow shoppers! We're currently building our new fashion store. 
+  Add your email below to stay up-to-date with announcements and our launch deals.</p>
 
-  Email Address
+  <input type="email" aria-label="email" placeholder="Email Address" autofocus>
+  <span role="button" tabindex="0" onclick="validateEmail()"><img src="images/icon-arrow.svg" alt="Arrow"></span>
   
   <footer>
     <p class="attribution">
