Continue with mobile styles

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
       <p>Hello fellow shoppers! We're currently building our new fashion store. 
       Add your email below to stay up-to-date with announcements and our launch deals.</p>
 
-      <input type="email" aria-label="email" placeholder="Email Address" autofocus>
-      <span role="button" tabindex="0" onclick="validateEmail()"><img src="images/icon-arrow.svg" alt="Arrow" id="arrow"></span>
+      <div class="input-wrapper">
+        <input type="email" aria-label="email" placeholder="Email Address" autofocus>
+        <span role="button" tabindex="0" onclick="validateEmail()"><img src="images/icon-arrow.svg" alt="Arrow" id="arrow"></span>
+        <p id="submit-message"></p>
+      </div>
     </div>
 
     <div id="desktop-hero">
